--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ three-js/01/start_fin/module_basic/hello.js
 three-js/01/start_fin/module_basic/index.html
 three-js/01/start_fin/module_basic/main.js
 three-js/02/basic_fin
+three-js/03/utility_fin
