--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ three-js/01/start_fin/module_basic/index.html
 three-js/01/start_fin/module_basic/main.js
 three-js/02/basic_fin
 three-js/03/utility_fin
+three-js/04/transform_fin
+three-js/05/geometry_fin
